fix: 전체로직 수정